crates/inkgen-typescript/tests/snapshots/profile_tests__profile_typed_accessors.snap
---
source: crates/inkgen-typescript/tests/profile_tests.rs
expression: generated
---
import type { Coding, Extension } from "./types";

/**
 * US Core Patient Profile
 *
 * Defines constraints and extensions on the Patient resource
 * @profile http://hl7.org/fhir/us/core/StructureDefinition/us-core-patient
 */
export class USCorePatient extends Patient {
  /** Profile URL for runtime validation */
  readonly __profile = 'http://hl7.org/fhir/us/core/StructureDefinition/us-core-patient';

  // Must-support elements (required by profile)
  /** Required by profile: Patient.identifier */
  declare identifier: NonNullable<Patient['identifier']>;

  // Extension accessors
  /**
   * Get the USCoreRaceExtension extension value
   * Race and ethnicity of the patient
   * @see http://hl7.org/fhir/us/core/StructureDefinition/us-core-race
   */
  get uSCoreRace(): Coding | undefined {
    const ext = this.extension?.find(e => e.url === 'http://hl7.org/fhir/us/core/StructureDefinition/us-core-race');
    return ext?.valueCoding;
  }

  /**
   * Set the USCoreRaceExtension extension value
   * Race and ethnicity of the patient
   * @see http://hl7.org/fhir/us/core/StructureDefinition/us-core-race
   */
  set uSCoreRace(value: Coding | undefined) {
    if (!this.extension) {
      this.extension = [];
    }
    const existingIndex = this.extension.findIndex(e => e.url === 'http://hl7.org/fhir/us/core/StructureDefinition/us-core-race');
    const newExt = value !== undefined ? { url: 'http://hl7.org/fhir/us/core/StructureDefinition/us-core-race', valueCoding: value } : undefined;
    if (existingIndex >= 0) {
      if (newExt) {
        this.extension[existingIndex] = newExt;
      } else {
        this.extension.splice(existingIndex, 1);
      }
    } else if (newExt) {
      this.extension.push(newExt);
    }
  }

  /**
   * Serialize to JSON string
   * @param pretty Whether to pretty-print the JSON
   */
  toJson(pretty?: boolean): string {
    return pretty ? JSON.stringify(this, null, 2) : JSON.stringify(this);
  }

  /**
   * Convert to plain object (strips __profile metadata)
   */
  toObject(): Patient {
    const { __profile, ...rest } = this;
    return rest as Patient;
  }

  /**
   * Create instance from JSON string with validation
   * @param json JSON string to parse
   * @throws {z.ZodError} if validation fails
   */
  static fromJson(json: string): USCorePatient {
    const parsed = JSON.parse(json);
    return USCorePatient.fromObject(parsed);
  }

  /**
   * Create instance from object with validation
   * @param obj Object to validate
   * @throws {z.ZodError} if validation fails
   */
  static fromObject(obj: unknown): USCorePatient {
    return Object.assign(new USCorePatient(), obj);
  }
}

/**
 * Type guard to check if a value is a USCorePatient
 */
export function isUSCorePatient(value: Patient): value is USCorePatient {
  return '__profile' in value && value.__profile === 'http://hl7.org/fhir/us/core/StructureDefinition/us-core-patient';
}
